import { render } from '@testing-library/react'
import * as hooks from '../../hooks'
import { DefaultTheme } from '../../themes'
import { CookieConsentBannerConfigWithDefaults, CookieProviderConfig } from '../../types'
import { CookieConsentGate } from './ConsentGate'

describe('CookieConsentGate', () => {
    let useConfigMock: jest.SpyInstance
    let useStyleMock: jest.SpyInstance
    let useCookieStateMock: jest.SpyInstance
    let setIsEnabledMock: jest.Func

    const domain = 'example.com'
    const cookiesValidForDays = 30
    const provider: CookieProviderConfig = {
        name: 'Some Website',
        id: 'website',
        category: 'Essential',
        description: 'We use session cookies to store your session on our website. This cookie is necessary to use the website.',
        dataProtectionLink: 'https://example.com/privacy',
        cookies: [
            {
                name: 'app_session',
                duration: 7,
                unit: 'days',
                purpose: 'Store the session'
            },
            {
                name: 'logged_in',
                duration: 7,
                unit: 'days',
                purpose: 'Store the login status'
            }
        ]
    }
    const children = <div>Test</div>

    const mockConfig = {
        domain,
        cookiesValidForDays,
        lang: 'enUS' as const,
        providers: [],
        cookiePolicyLink: '',
        websiteName: '',
        labels: {
            headings: {
                consentGate: 'Consent Required'
            },
            consentGate: {
                message: 'This content requires consent for'
            }
        }
    }

    beforeEach(() => {
        setIsEnabledMock = jest.fn()
        useConfigMock = jest.spyOn(hooks, 'useConfig').mockReturnValue(mockConfig as unknown as CookieConsentBannerConfigWithDefaults)
        useStyleMock = jest.spyOn(hooks, 'useStyle').mockReturnValue(DefaultTheme)
        useCookieStateMock = jest.spyOn(hooks, 'useCookieState').mockReturnValue({ isEnabled: true, setIsEnabled: setIsEnabledMock })
    })

    afterEach(() => {
        jest.restoreAllMocks()
    })

    it('should render children if consented to provider', () => {
        const { container } = render(<CookieConsentGate cookieProvider={provider}>{children}</CookieConsentGate>)
        expect(container).toMatchSnapshot()
    })

    it('should render gate content if not consented to cookies of provider', () => {
        useCookieStateMock.mockReturnValue({ isEnabled: false, setIsEnabled: setIsEnabledMock })
        const { container } = render(<CookieConsentGate cookieProvider={provider}>{children}</CookieConsentGate>)
        expect(container).toMatchSnapshot()
    })

    it('should use serviceProvider when available', () => {
        const providerWithServiceProvider: CookieProviderConfig = {
            ...provider,
            name: 'Google Analytics & Ads',
            serviceProvider: 'Google'
        }
        useCookieStateMock.mockReturnValue({ isEnabled: false, setIsEnabled: setIsEnabledMock })
        const { container } = render(<CookieConsentGate cookieProvider={providerWithServiceProvider}>{children}</CookieConsentGate>)
        expect(container).toMatchSnapshot()
    })
})
