// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CookieConsentGate should render children if consented to provider 1`] = `
<div>
  <div>
    Test
  </div>
</div>
`;

exports[`CookieConsentGate should render gate content if not consented to cookies of provider 1`] = `
<div>
  <div
    class="md:p-12 p-4 rounded-lg border max-w-5xl mx-auto !text-left"
    style="background-color: rgb(255, 255, 255); border-color: #f8fafc;"
  >
    <h2
      class="text-xl font-semibold mb-4"
      style="color: rgb(30, 41, 59);"
    >
      Consent Required
    </h2>
    <p
      class="mb-12"
      style="color: rgb(100, 116, 139);"
    >
      This content requires consent for
       
      <b
        style="color: rgb(100, 116, 139);"
      >
        Some Website
        .
      </b>
    </p>
    <div
      class="mb-12 md:p-8 p-2 rounded-lg"
      style="background-color: rgba(248, 250, 252, 0.2);"
    >
      <div
        class="mb-3 pt-3"
        style="border-color: rgba(248, 250, 252, 0.8);"
      >
        <div
          class="flex justify-between items-center"
        >
          <div>
            <h4
              class="font-bold text-base"
              style="color: rgb(30, 41, 59);"
            >
              Some Website
            </h4>
            <p
              class="text-xs text-justify hyphens-auto"
              style="color: rgb(100, 116, 139);"
            >
              We use session cookies to store your session on our website. This cookie is necessary to use the website.
               
              <a
                class="underline"
                href="https://example.com/privacy"
              >
                Privacy Policy of Some Website
              </a>
            </p>
          </div>
          <div
            class="w-24 flex flex-shrink-0 justify-end"
          >
            <button
              aria-checked="false"
              aria-label="website"
              data-testid="react-gdpr-cookie-consent-switch-button"
              disabled=""
              role="switch"
              style="position: relative; display: inline-flex; align-items: center; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 2px; background-color: rgb(248, 250, 252); cursor: not-allowed; opacity: 0.5; transition: background-color 200ms ease-in-out;"
              type="button"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transform: translateX(0); transition: transform 200ms ease-in-out; pointer-events: none;"
              />
            </button>
          </div>
        </div>
        <div
          class="mt-4"
          data-headlessui-state=""
        >
          <div
            aria-expanded="false"
            class="min-w-24 flex justify-end items-center hover:cursor-pointer mt-4"
            data-headlessui-state=""
            id="headlessui-disclosure-button-«r0»"
          >
            <p
              class="text-xs"
              style="color: rgb(100, 116, 139);"
            >
              Show details
            </p>
            <svg
              class="w-6 h-6 ml-3"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              style="color: rgb(100, 116, 139);"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Chevron down to expand the section
              </title>
              <path
                d="m19.5 8.25-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-end w-full"
    >
      <button
        class="hover:scale-105 px-3 py-2 md:w-max w-full text-sm rounded-lg 
            duration-300 font-medium opacity-50 cursor-not-allowed"
        disabled=""
        style="color: rgb(255, 255, 255); background-color: rgb(59, 130, 246);"
        type="button"
      >
        Accept Selected
      </button>
    </div>
  </div>
</div>
`;

exports[`CookieConsentGate should use serviceProvider when available 1`] = `
<div>
  <div
    class="md:p-12 p-4 rounded-lg border max-w-5xl mx-auto !text-left"
    style="background-color: rgb(255, 255, 255); border-color: #f8fafc;"
  >
    <h2
      class="text-xl font-semibold mb-4"
      style="color: rgb(30, 41, 59);"
    >
      Consent Required
    </h2>
    <p
      class="mb-12"
      style="color: rgb(100, 116, 139);"
    >
      This content requires consent for
       
      <b
        style="color: rgb(100, 116, 139);"
      >
        Google Analytics & Ads
        .
      </b>
    </p>
    <div
      class="mb-12 md:p-8 p-2 rounded-lg"
      style="background-color: rgba(248, 250, 252, 0.2);"
    >
      <div
        class="mb-3 pt-3"
        style="border-color: rgba(248, 250, 252, 0.8);"
      >
        <div
          class="flex justify-between items-center"
        >
          <div>
            <h4
              class="font-bold text-base"
              style="color: rgb(30, 41, 59);"
            >
              Google Analytics & Ads
            </h4>
            <p
              class="text-xs text-justify hyphens-auto"
              style="color: rgb(100, 116, 139);"
            >
              We use session cookies to store your session on our website. This cookie is necessary to use the website.
               
              <a
                class="underline"
                href="https://example.com/privacy"
              >
                Privacy Policy of Google
              </a>
            </p>
          </div>
          <div
            class="w-24 flex flex-shrink-0 justify-end"
          >
            <button
              aria-checked="false"
              aria-label="website"
              data-testid="react-gdpr-cookie-consent-switch-button"
              disabled=""
              role="switch"
              style="position: relative; display: inline-flex; align-items: center; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 2px; background-color: rgb(248, 250, 252); cursor: not-allowed; opacity: 0.5; transition: background-color 200ms ease-in-out;"
              type="button"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transform: translateX(0); transition: transform 200ms ease-in-out; pointer-events: none;"
              />
            </button>
          </div>
        </div>
        <div
          class="mt-4"
          data-headlessui-state=""
        >
          <div
            aria-expanded="false"
            class="min-w-24 flex justify-end items-center hover:cursor-pointer mt-4"
            data-headlessui-state=""
            id="headlessui-disclosure-button-«r2»"
          >
            <p
              class="text-xs"
              style="color: rgb(100, 116, 139);"
            >
              Show details
            </p>
            <svg
              class="w-6 h-6 ml-3"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              style="color: rgb(100, 116, 139);"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Chevron down to expand the section
              </title>
              <path
                d="m19.5 8.25-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-end w-full"
    >
      <button
        class="hover:scale-105 px-3 py-2 md:w-max w-full text-sm rounded-lg 
            duration-300 font-medium opacity-50 cursor-not-allowed"
        disabled=""
        style="color: rgb(255, 255, 255); background-color: rgb(59, 130, 246);"
        type="button"
      >
        Accept Selected
      </button>
    </div>
  </div>
</div>
`;
